# OpenNFS

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  azure-pipelines.yml  vsts-ci.yml
.circleci/: config.yml
.github/workflows/: build.yml  cmake.yml
FCE-To-OBJ/: main.c
cmake/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  CompileGLSLToSPIRV.cmake  OptimizeForArchitecture.cmake  g3log.cmake
doc/: MUS_MAP_LIN_filedesc.txt  Nfs2TRK.txt  PSH_filedesc.txt
include/: LICENSE.TXT
include/CrpLib/: BPlanes.cpp  BPlanes.h  Base.h  Common.h  CrpFile.cpp  CrpFile.h  Effect.h  Entry.cpp  Entry.h  Interfaces.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Part.cpp  RawData.cpp  RawData.h  Vector2.cpp  Vector2.h  Vector4.cpp
include/TGALoader/: TGALoader.h
include/argparse/: argparse.hpp
include/imgui/: imgui_impl_glfw_gl3.cpp
include/stb/: stb_image.h
lib/LibOpenNFS/: CMakeLists.txt  LibOpenNFS.h
lib/LibOpenNFS/Common/: IRawData.h  NFSVersion.h  TextureUtils.cpp  TextureUtils.h  Utils.cpp  Utils.h
lib/LibOpenNFS/Common/Lights/: BaseLight.h  GlobalLight.cpp  GlobalLight.h  TrackLight.cpp  TrackLight.h
lib/LibOpenNFS/Entities/: BaseLight.cpp  BaseLight.h  Car.cpp  Car.h  CarGeometry.cpp  CarGeometry.h  Geometry.cpp  Geometry.h  Track.cpp  Track.h  TrackBlock.cpp  TrackBlock.h  TrackEntity.cpp  TrackEntity.h  TrackGeometry.cpp  TrackGeometry.h  TrackLight.cpp  TrackLight.h  TrackSound.cpp  TrackSound.h  TrackTexture.cpp  TrackTexture.h  TrackTextureAsset.h  TrackVRoad.cpp  TrackVRoad.h
lib/LibOpenNFS/Models/: Geometry.h  Sound.h  Texture.cpp  Texture.h  Track.cpp  Track.h  TrackBlock.cpp  TrackBlock.h  TrackEntity.cpp  TrackEntity.h  TrackLight.cpp  TrackLight.h  VirtualRoad.cpp  VirtualRoad.h
lib/LibOpenNFS/NFS2/: Common.h  NFS2Loader.cpp  NFS2Loader.h
lib/LibOpenNFS/NFS2/COL/: ColFile.cpp
lib/LibOpenNFS/NFS2/GEO/: GeoFile.cpp  GeoFile.h
lib/LibOpenNFS/NFS2/PSH/: PshFile.cpp  PshFile.h
lib/LibOpenNFS/NFS2/TRK/: ExtraObjectBlock.cpp  StructureBlock.cpp  StructureRefBlock.cpp  StructureRefBlock.h  SuperBlock.cpp  TrackBlock.cpp  TrkFile.cpp
lib/LibOpenNFS/NFS3/: Common.h  NFS3Loader.cpp  NFS3Loader.h
lib/LibOpenNFS/NFS3/BNK/: BnkFile.cpp
lib/LibOpenNFS/NFS3/COL/: ColFile.cpp  ColFile.h
lib/LibOpenNFS/NFS3/FCE/: FceFile.cpp  FceFile.h
lib/LibOpenNFS/NFS3/FEDATA/: FedataFile.cpp
lib/LibOpenNFS/NFS3/FFN/: FfnFile.cpp
lib/LibOpenNFS/NFS3/FRD/: ExtraObjectBlock.cpp  FrdFile.cpp  FrdFile.h  PolyBlock.cpp  PolyBlock.h  TexBlock.cpp  TexBlock.h  TrkBlock.cpp  TrkBlock.h
lib/LibOpenNFS/NFS3/SPEEDS/: SpeedsFile.cpp
lib/LibOpenNFS/NFS4/PC/: NFS4Loader.cpp  NFS4Loader.h
lib/LibOpenNFS/NFS4/PS1/: NFS4PS1Loader.h  SerializedGroupOps.h
lib/LibOpenNFS/NFS5/: NFS5Loader.cpp  NFS5Loader.h
lib/LibOpenNFS/Shared/: CanFile.cpp  HrzFile.cpp  HrzFile.h  VivFile.cpp  VivFile.h
lib/LibOpenNFS/lib/CrpLib/: Base.cpp  Common.h  DataAllocator.cpp  Effect.cpp  Entry.cpp  Lib.h  Material.h  Matrix.h  Part.cpp  Part.h  RawData.h  Vector4.h
lib/LibOpenNFS/lib/fshtool/: fshtool.c  fshtool.h
lib/NEAT/: CHANGES  CMakeLists.txt  Makefile  README  experiments.cpp  experiments.h  gene.cpp  gene.h  genome.cpp  genome.h  innovation.cpp  innovation.h  link.cpp  link.h  neat.cpp  neat.h  neatmain.cpp  neatmain.h  network.cpp  network.h  nnode.cpp  nnode.h  organism.cpp  organism.h  p2mpar3bare.ne  p2nv.ne  p2test.ne  params256.ne  pole1startgenes  pole2_markov.ne  pole2startgenes.original  pole2startgenes1  population.cpp  population.h  species.cpp  species.h  test.ne  trait.cpp  trait.h  xorstartgenes
resources/asset/: icon.rc
resources/misc/: racers.json
resources/trk006/: 3tr06.hrz  3tr06n.hrz  3tr06nw.hrz  3tr06w.hrz  sky.fsh  tr06.ccm  tr06.col  tr06.frd  tr060.qfs  tr0600.can  tr0600a.can  tr0601.can  tr0602.can  tr0603.can  tr0604.can  tr0605.can  tr0606.can  tr060_8.qfs  tr061.qfs  tr061_8.qfs
resources/ui/: fonts.json
shaders/: BillboardFragmentShader.fragmentshader  BillboardShader.frag  BillboardShader.vert  BillboardVertexShader.vert  BillboardVertexShader.vertexshader  BulletFragmentShader.frag  BulletVertexShader.vert  CarFragmentShader.frag  CarFragmentShader.fragmentshader  CarShader.frag  CarShader.vert  CarVertexShader.vert  CarVertexShader.vertexshader  DepthFragmentShader.frag  DepthFragmentShader.fragmentshader  DepthShader.vert  DepthVertexShader.vertexshader  FontVertexShader.vert  MenuFragmentShader.frag  MiniMapVertexShader.vert  RaceNetFragmentShader.frag  RaceNetFragmentShader.fragmentshader  RaceNetVertexShader.vert  RaceNetVertexShader.vertexshader  ShaderPreamble.h  SkidMarkShader.frag  SkidMarkShader.vert  SkydomeFragmentShader.fragmentshader  SkydomeShader.frag  SkydomeVertexShader.vert  SkydomeVertexShader.vertexshader  TextBillboardShader.frag  TextBillboardShader.vert  TextureFragmentShader.fragmentshader  TrackDebugShader.fragmentshader  TrackFragmentShader.frag  TrackFragmentShader.fragmentshader  TrackShader.frag  TrackShader.vert  TrackVertexShader.vert  (+8 more)
shaders/vk/: compile-shaders.sh
src/: Config.cpp  Config.h  Enums.h  Functions.c  Functions.h  Model.cpp  Model.h  NFS3_Mesh.cpp  NFS3_Mesh.h  NFSVersion.h  TGALoader.cpp  TrackBlock.h  controls.cpp  controls.h  fce_reader.cpp  fce_reader.h  main.c  main.cpp  nfs2_data.h  nfs_data.h  nfs_loader.cpp  nfs_loader.h  obj_loader.cpp  obj_loader.h  obj_loader.hpp  physics.cpp  shader.cpp  shader.h  trk_loader.cpp  trk_loader.h
src/Camera/: BaseCamera.cpp  BaseCamera.h  Camera.cpp  Camera.h  CarCamera.cpp  CarCamera.h  FreeCamera.cpp  FreeCamera.h  HermiteCamera.cpp  HermiteCamera.h
src/GameState/: GameState.h  GameStateManager.cpp  GameStateManager.h  MainMenuState.cpp  MainMenuState.h  RaceLoadState.cpp  RaceLoadState.h  RaceState.cpp  RaceState.h  TrackSelectionState.cpp  TrackSelectionState.h  VehicleSelectionState.cpp  VehicleSelectionState.h
src/Input/: InputManager.cpp  InputManager.h
src/Loaders/: CarLoader.cpp  CarLoader.h  (+40 more)
test/: UtilTest.cpp
tools/: QFSREAD.TXT  fshtool.c  fshtool.h  readme.txt
(+344 files in other folders)
